--- a/KrysiaBartek2024/source/1ntInterference.tex
+++ b/KrysiaBartek2024/source/1ntInterference.tex
@@ -21,9 +21,9 @@
     \item \dbl\ = Stayman
 \end{itemize}
 
-SYSTEM ON
+\textsc{system on}
 
-\subsubsection*{1\ntx\ -- (2\clubs\alrts) -- ?}
+\subsubsection*{1\ntx\ -- (\alrts{2\clubs}) -- ?}
 2\clubs\ = 5/4 \major
 \begin{itemize}
     \item \dbl\ = 8+
@@ -45,7 +45,7 @@ SYSTEM ON
     \item 4\diams, 4\hearts\ = Texas
 \end{itemize}
 
-\subsubsection*{1\ntx\ -- (2\diams\alrts) -- ?}
+\subsubsection*{1\ntx\ -- (\alrts{2\diams}) -- ?}
 2\diams\ = 6+ \major
 \begin{itemize}
     \item \dbl\ = 8+
@@ -79,14 +79,14 @@ SYSTEM ON
     \item 2\nt\ = Lebensohl
     \item 3\clubs\ = 5+\diams, \inv+
     \item 3\diams\ = 5+\hearts, \inv+
-    \item 3\hearts\ = 55 \minor, \gf
+    \item 3\hearts\ = 55\minor, \gf
     \item 3\spades\ = 1-\spades, \inv+
     \item 3\nt\ = no \spades\ stopper
     \item 4\diams\ = Texas
 \end{itemize}
 
-\subsubsection*{1\ntx\ -- (2\nt\alrts) -- ?}
-2\nt\ = minor
+\subsubsection*{1\ntx\ -- (\alrts{2\nt}) -- ?}
+2\nt\ = \minor
 \begin{itemize}
     \item \dbl\ = 10+
     \item 3\clubs\ = Stayman
@@ -111,11 +111,10 @@ SYSTEM ON
     \item 3\nt\ = to play
 \end{itemize}
 
-\subsubsection*{1\ntx\ -- (\dbl\alrts) -- ?}
+\subsubsection*{1\ntx\ -- (\alrts{\dbl}) -- ?}
 \dbl\ artificial
 
-SYSTEM ON
-
+\textsc{system on}
 
 \subsubsection*{1\ntx\ -- (\dbl) -- ?}
 \dbl\ = penalty
@@ -125,7 +124,7 @@ SYSTEM ON
     \item 2\anysuit{x}\ = forces \anysuit{x+1}
 \end{itemize}
 
-\subsubsection*{1\ntx\ -- (\dbl) -- P\alrts\ -- (P)\\
+\subsubsection*{1\ntx\ -- (\dbl) -- \alrts{P} -- (P)\\
                 \rdbl\ -- (P) -- ?}
 \begin{itemize}
     \item \pass\ = penalty
