--- a/KrysiaBartek2024/source/2ntOpening.tex
+++ b/KrysiaBartek2024/source/2ntOpening.tex
@@ -15,7 +15,7 @@
 %%% TITLE: 2\ntx\ opening
 %%% SYSTEM BEGIN %%%
 
-2\nt\alrts opening = 21-22 \bal, may have 5\majs
+\alrts{2\nt} opening = 21-22 \bal, may have 5\majs
 
 \subsubsection*{2\ntx\ -- ?}
 \begin{itemize}
