--- a/KrysiaBartek2024/source/dealingWithMulti.tex
+++ b/KrysiaBartek2024/source/dealingWithMulti.tex
@@ -29,7 +29,7 @@
     \item 4\diams = \diams+\major
 \end{itemize}
 
-\subsubsection*{(2\diams) -- P -- (P\alrts) -- ?}
+\subsubsection*{(2\diams) -- P -- (\alrts{P}) -- ?}
 System like after 2\diams preempt.
 
 \subsubsection*{(2\diams) -- P -- (2\hearts) -- ?}
