--- a/KrysiaBartek2024/source/krysia_pawel_strefa.tex
+++ b/KrysiaBartek2024/source/krysia_pawel_strefa.tex
@@ -270,11 +270,9 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
 \subsubsection*{(1\ntx) -- \dbl\ -- (P) -- ?}
 \begin{itemize}
     \item 2\clubs\ = \pass/correct
-    \item 2\diams\ = own suit
-    \item 2\hearts\ = \pass/correct
+    \item 2\diams\ = show major
+    \item 2\hearts\ = own suit
     \item 2\spades\ = own suit
-    \item 2\nt\ = show minor
-    \item 3\diams\ = show major
 \end{itemize}
 
 \subsubsection*{(1\ntx) -- 2\clubs\ -- (P) -- ?}
@@ -399,9 +397,9 @@ It does not deny 3/4\diams.
     \item \dbl\ = Stayman
 \end{itemize}
 
-SYSTEM ON
+\textsc{system on}
 
-\subsubsection*{1\ntx\ -- (2\clubs\alrts) -- ?}
+\subsubsection*{1\ntx\ -- (\alrts{2\clubs}) -- ?}
 2\clubs\ = 5/4 \major
 \begin{itemize}
     \item \dbl\ = 8+
@@ -423,7 +421,7 @@ SYSTEM ON
     \item 4\diams, 4\hearts\ = Texas
 \end{itemize}
 
-\subsubsection*{1\ntx\ -- (2\diams\alrts) -- ?}
+\subsubsection*{1\ntx\ -- (\alrts{2\diams}) -- ?}
 2\diams\ = 6+ \major
 \begin{itemize}
     \item \dbl\ = 8+
@@ -457,14 +455,14 @@ SYSTEM ON
     \item 2\nt\ = Lebensohl
     \item 3\clubs\ = 5+\diams, \inv+
     \item 3\diams\ = 5+\hearts, \inv+
-    \item 3\hearts\ = 55 \minor, \gf
+    \item 3\hearts\ = 55\minor, \gf
     \item 3\spades\ = 1-\spades, \inv+
     \item 3\nt\ = no \spades\ stopper
     \item 4\diams\ = Texas
 \end{itemize}
 
-\subsubsection*{1\ntx\ -- (2\nt\alrts) -- ?}
-2\nt\ = minor
+\subsubsection*{1\ntx\ -- (\alrts{2\nt}) -- ?}
+2\nt\ = \minor
 \begin{itemize}
     \item \dbl\ = 10+
     \item 3\clubs\ = Stayman
@@ -489,11 +487,10 @@ SYSTEM ON
     \item 3\nt\ = to play
 \end{itemize}
 
-\subsubsection*{1\ntx\ -- (\dbl\alrts) -- ?}
+\subsubsection*{1\ntx\ -- (\alrts{\dbl}) -- ?}
 \dbl\ artificial
 
-SYSTEM ON
-
+\textsc{system on}
 
 \subsubsection*{1\ntx\ -- (\dbl) -- ?}
 \dbl\ = penalty
@@ -503,7 +500,7 @@ SYSTEM ON
     \item 2\anysuit{x}\ = forces \anysuit{x+1}
 \end{itemize}
 
-\subsubsection*{1\ntx\ -- (\dbl) -- P\alrts\ -- (P)\\
+\subsubsection*{1\ntx\ -- (\dbl) -- \alrts{P} -- (P)\\
                 \rdbl\ -- (P) -- ?}
 \begin{itemize}
     \item \pass\ = penalty
@@ -514,7 +511,7 @@ SYSTEM ON
 
 \section{\texorpdfstring{2\ntx\ opening}{2ntOpening}}\label{sec:2ntOpening}
 
-2\nt\alrts opening = 21-22 \bal, may have 5\majs
+\alrts{2\nt} opening = 21-22 \bal, may have 5\majs
 
 \subsubsection*{2\ntx\ -- ?}
 \begin{itemize}
