--- a/KrysiaBartek2024/source/rebid3card.tex
+++ b/KrysiaBartek2024/source/rebid3card.tex
@@ -53,7 +53,7 @@ Be even more aggressive in competition. Use opponents' suit to show shortness + 
     \hhand{Kxx}{xx}{Axx}{AJxxx} & 2\spades \\
     \hhand{KTxx}{x}{AQxx}{Axxx} & 3\spades \\
     \hhand{KQxx}{x}{AKxx}{Axxx} & 3\hearts \\
-    \hhand{KQxx}{Kx}{AKxx}{Axxx} & \dbl\alrts \\
+    \hhand{KQxx}{Kx}{AKxx}{Axxx} & \alrts{\dbl} \\
     \end{tabular}
 \end{table} 
 
