--- a/KrysiaBartek2024/source/overcalling1nt.tex
+++ b/KrysiaBartek2024/source/overcalling1nt.tex
@@ -27,11 +27,9 @@
 \subsubsection*{(1\ntx) -- \dbl\ -- (P) -- ?}
 \begin{itemize}
     \item 2\clubs\ = \pass/correct
-    \item 2\diams\ = own suit
-    \item 2\hearts\ = \pass/correct
+    \item 2\diams\ = show major
+    \item 2\hearts\ = own suit
     \item 2\spades\ = own suit
-    \item 2\nt\ = show minor
-    \item 3\diams\ = show major
 \end{itemize}
 
 \subsubsection*{(1\ntx) -- 2\clubs\ -- (P) -- ?}
