--- a/lib/bridgetex2.sty
+++ b/lib/bridgetex2.sty
@@ -79,10 +79,14 @@
 \newcommand{\anysuit}[1]{\color{PineGreen}{\textbf{{#1}}}\color{black}\xspace}
 \newcommand{\mins}{\textbf{m}\xspace}
 \newcommand{\majs}{\textbf{\small{M}}\xspace}
-\newcommand{\alrts}{\textsuperscript{\textcolor{red}{A}}\xspace}
+% \newcommand{\alrts}{\textsuperscript{\textcolor{red}{A}}\xspace}
 
 \newcommand{\twosuit}[2]{%
     #1\unskip\hspace{-3pt}#2%
+}
+
+\newcommand{\alrts}[1]{%
+    #1\unskip{\textsuperscript{\textcolor{red}{A}}\xspace}%
 }
 
 \DeclareFloatingEnvironment[
