--- a/KrysiaBartek2024/source/krysia_pawel_strefa.tex
+++ b/KrysiaBartek2024/source/krysia_pawel_strefa.tex
@@ -413,10 +413,10 @@ It does not deny 3/4\diams.
     \item \dbl\ = negative
     \item 2\hearts, 2\spades\ = to play
     \item 2\nt\ = Lebensohl
-    \item 3\clubs\ = 5+\hearts, \inv+
-    \item 3\diams\ = 1-\diams, \inv+
-    \item 3\hearts\ = 5+\spades, \inv+
-    \item 3\spades\ = 5+\clubs, \inv+
+    \item 3\clubs\ = 5+\hearts, \invp
+    \item 3\diams\ = 1-\diams, \invp
+    \item 3\hearts\ = 5+\spades, \invp
+    \item 3\spades\ = 5+\clubs, \invp
     \item 3\nt\ = no \diams\ stopper
     \item 4\diams, 4\hearts\ = Texas
 \end{itemize}
@@ -427,9 +427,9 @@ It does not deny 3/4\diams.
     \item \dbl\ = 8+
     \item 2\hearts, 2\spades\ = to play
     \item 2\nt\ = Lebensohl
-    \item 3\clubs\ = 5+\diams, \inv+
-    \item 3\diams\ = 5+\hearts, \inv+
-    \item 3\hearts\ = 5+\spades, \inv+
+    \item 3\clubs\ = 5+\diams, \invp
+    \item 3\diams\ = 5+\hearts, \invp
+    \item 3\hearts\ = 5+\spades, \invp
     \item 3\spades\ = 5/5 \minor
     \item 3\nt\ = to play
     \item 4\diams, 4\hearts\ = Texas
@@ -441,9 +441,9 @@ It does not deny 3/4\diams.
     \item \dbl\ = negative
     \item 2\spades\ = to play
     \item 2\nt\ = Lebensohl
-    \item 3\clubs\ = 5+\diams, \inv+
-    \item 3\diams\ = 5+\spades, \inv+
-    \item 3\hearts\ = 1-\hearts, \inv+
+    \item 3\clubs\ = 5+\diams, \invp
+    \item 3\diams\ = 5+\spades, \invp
+    \item 3\hearts\ = 1-\hearts, \invp
     \item 3\spades\ = 55 \minor, \gf
     \item 3\nt\ = no \hearts\ stopper
     \item 4\hearts\ = Texas
@@ -453,10 +453,10 @@ It does not deny 3/4\diams.
 \begin{itemize}
     \item \dbl\ = negative
     \item 2\nt\ = Lebensohl
-    \item 3\clubs\ = 5+\diams, \inv+
-    \item 3\diams\ = 5+\hearts, \inv+
+    \item 3\clubs\ = 5+\diams, \invp
+    \item 3\diams\ = 5+\hearts, \invp
     \item 3\hearts\ = 55\minor, \gf
-    \item 3\spades\ = 1-\spades, \inv+
+    \item 3\spades\ = 1-\spades, \invp
     \item 3\nt\ = no \spades\ stopper
     \item 4\diams\ = Texas
 \end{itemize}
@@ -466,23 +466,23 @@ It does not deny 3/4\diams.
 \begin{itemize}
     \item \dbl\ = 10+
     \item 3\clubs\ = Stayman
-    \item 3\diams\ = 5+\hearts, \inv+
-    \item 3\hearts\ = 5+\spades, \inv+
+    \item 3\diams\ = 5+\hearts, \invp
+    \item 3\hearts\ = 5+\spades, \invp
 \end{itemize}
 
 \subsubsection*{1\ntx\ -- (3\clubs) -- ?}
 \begin{itemize}
     \item \dbl\ = negative
-    \item 3\diams\ = 5+\hearts, \inv+
-    \item 3\hearts\ = 5+\spades, \inv+
-    \item 3\spades\ = 5+\diams, \inv+
+    \item 3\diams\ = 5+\hearts, \invp
+    \item 3\hearts\ = 5+\spades, \invp
+    \item 3\spades\ = 5+\diams, \invp
     \item 3\nt\ = to play
 \end{itemize}
 
 \subsubsection*{1\ntx\ -- (3\diams) -- ?}
 \begin{itemize}
     \item \dbl\ = negative
-    \item 3\hearts\ = 5+\spades, \inv+
+    \item 3\hearts\ = 5+\spades, \invp
     \item 3\spades\ = 5+\hearts, \gf
     \item 3\nt\ = to play
 \end{itemize}
