--- a/KrysiaBartek2024/source/rebid3card.tex
+++ b/KrysiaBartek2024/source/rebid3card.tex
@@ -64,7 +64,7 @@ Be even more aggressive in competition. Use opponents' suit to show shortness + 
 
 \subsubsection*{1\clubs -- 1\hearts \\ 2\hearts -- ?}
 \begin{itemize}
-    \item 2\spades = 5+\hearts, \inv+, \lsf
+    \item 2\spades = 5+\hearts, \invp, \lsf
     \item 2\nt = 4\hearts, \inv
     \item 3\clubs = 4\hearts + 4\clubs, \inv
     \item 3\diams = 4\hearts, \gf
@@ -74,7 +74,7 @@ Be even more aggressive in competition. Use opponents' suit to show shortness + 
 \begin{itemize}
     \item 2\nt = 4\spades, \inv
     \item 3\clubs = 4\spades + 4\clubs, \inv
-    \item 3\diams = 5\spades, \inv+, \lsf
+    \item 3\diams = 5\spades, \invp, \lsf
     \item 3\hearts = 4\spades, \gf
 \end{itemize}
 
