--- a/KrysiaBartek2024/source/transfers1MX.tex
+++ b/KrysiaBartek2024/source/transfers1MX.tex
@@ -6,7 +6,7 @@
 \setmainlanguage{english}
 
 \title{Transfers after 1\majs\ (\dbl)}
-\author{Krystyna Gasińska, Bartek Słupik}
+\author{Krystyna Gasińska, Bartek Słupik\\based on Eric Kokish' system}
 \begin{document}
 \maketitle
 
