--- a/KrysiaBartek2024/source/1mOpening.tex
+++ b/KrysiaBartek2024/source/1mOpening.tex
@@ -70,8 +70,8 @@ bidding higher suit denies lower stopper
 \subsubsection*{1\clubs\ -- 2\spades \\ ?}
 \begin{itemize}
     \item 2\nt\ = \bal min
-    \item 3\clubs\ = 5+\clubs\ min
-    \item 3\diams\ = 5+\diams\ \gf
+    \item 3\clubs\ = 5+\clubs min
+    \item 3\diams\ = 5+\clubs \gf
     \item 3\hearts\ = 1-\hearts, 5+\clubs\ \gf
     \item 3\spades\ = 1-\spades, 5+\clubs\ \gf
     \item 3\nt\ = to play
