--- a/KrysiaBartek2024/source/1mOpening.tex
+++ b/KrysiaBartek2024/source/1mOpening.tex
@@ -22,7 +22,7 @@
     \item 1\spades\ = 4+\spades
     \item 1\ntx\ = 7-10, no 4\majs
     \item 2\clubs\ = 12-14 \bal or \clubs, \gf
-    \item 2\diams\ = no 4\majs, 5+\diams, \gf
+    \item 2\diams\ = 5+\diams, \gf, may have 4\majs
     \item 2\hearts\ = 5\spades4\hearts\ 6-9
     \item 2\spades\ = 11+ \bal, no 4\majs
     \item 2\ntx\ = 11-12 \bal
