--- a/KrysiaBartek2024/source/dealingWithMulti.tex
+++ b/KrysiaBartek2024/source/dealingWithMulti.tex
@@ -20,7 +20,7 @@
     \item \dbl = (13)14-16 \bal, no 5\majs, may have minor singleton \vimp
     \item 2\hearts = 11-15, 5+\hearts
     \item 2\spades = 11-15, 5+\spades
-    \item 2\nt = 17-19, \bal, may have 5\majs \imp
+    \item 2\nt = 17-19, \bal
     \item 3\clubs = \clubs, not 5332/5422
     \item 3\diams = \diams, not 5332/5422
     \item 3\hearts, 3\spades = solid suit, weaker then power double
