--- a/KrysiaBartek2024/source/krysia_bartek_strefa.tex
+++ b/KrysiaBartek2024/source/krysia_bartek_strefa.tex
@@ -77,7 +77,7 @@
     \item 1\spades\ = 4+\spades
     \item 1\ntx\ = 7-10, no 4\majs
     \item 2\clubs\ = 12-14 \bal or \clubs, \gf
-    \item 2\diams\ = no 4\majs, 5+\diams, \gf
+    \item 2\diams\ = 5+\diams, \gf, may have 4\majs
     \item 2\hearts\ = 5\spades4\hearts\ 6-9
     \item 2\spades\ = 11+ \bal, no 4\majs
     \item 2\ntx\ = 11-12 \bal
@@ -475,7 +475,7 @@ After any 1\anysuit{x}\ -- 1\anysuit{y}\ -- 1\anysuit{z}\ sequence (except:
     \item 3\anysuit{x} = 4-fit, solid 5\anysuit{x}
     \item 2\nt = 4-fit, solid 5\clubs
     \item 3\majs = 5-fit 4-6\dps (or 4 with shortness)
-    \item 3\nt = Two Tiered Splinters = 4+\majs, unspecified singleton, (10)11\dps
+    \item 3\nt over 1\spades (3\spades over 1\hearts) = Two Tiered Splinters = 4+\majs, unspecified singleton, (10)11\dps \\
     \item 4\clubs/4\diams/4\hearts = void splinter
 \end{itemize}
 
@@ -951,7 +951,7 @@ any shortness 9-11, 4-card support, not \gf!
                 (P) -- 3\diams -- (P) -- 3\hearts \\
                 (P) -- ?}
 \begin{itemize}
-    \item 3\spades = no \hearts stopper
+    \item 3\spades = last train for a 3\nt game
     \item 3\nt = good \hearts stopper
 \end{itemize}
 
@@ -959,8 +959,10 @@ any shortness 9-11, 4-card support, not \gf!
                 (P) -- 3\diams -- (P) -- 3\hearts \\
                 (P) -- 3\spades -- (P) -- ?}
 \begin{itemize}
-    \item 3\nt = 3\spades
+    \item 3\nt = weak own suit
     \item 4\clubs, 4\diams = own suit
+    \item 4\hearts = \minor: 4\spades agreeing \clubs, 4\nt agreeing \diams
+    \item 4\spades = 3\spades
 \end{itemize}
 
 \subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\diams \\
@@ -1022,7 +1024,7 @@ any shortness 9-11, 4-card support, not \gf!
                 (P) -- 3\diams -- (P) -- 3\hearts \\
                 (P) -- ?}
 \begin{itemize}
-    \item 3\spades = no \spades stopper
+    \item 3\spades = last train for a 3\nt game
     \item 3\nt = good \spades stopper
 \end{itemize}
 
@@ -1030,8 +1032,9 @@ any shortness 9-11, 4-card support, not \gf!
                 (P) -- 3\diams -- (P) -- 3\hearts \\
                 (P) -- 3\spades -- (P) -- ?}
 \begin{itemize}
-    \item 3\nt = 3\hearts
+    \item 3\nt = weak own suit
     \item 4\clubs, 4\diams = own suit
+    \item 4\hearts = 3\hearts
 \end{itemize}
 
 \subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\diams \\
@@ -1081,7 +1084,7 @@ any shortness 9-11, 4-card support, not \gf!
     \item \dbl = (13)14-16 \bal, no 5\majs, may have minor singleton \vimp
     \item 2\hearts = 11-15, 5+\hearts
     \item 2\spades = 11-15, 5+\spades
-    \item 2\nt = 17-19, \bal, may have 5\majs \imp
+    \item 2\nt = 17-19, \bal
     \item 3\clubs = \clubs, not 5332/5422
     \item 3\diams = \diams, not 5332/5422
     \item 3\hearts, 3\spades = solid suit, weaker then power double
