--- a/KrysiaBartek2024/source/krysia_pawel_strefa.tex
+++ b/KrysiaBartek2024/source/krysia_pawel_strefa.tex
@@ -63,7 +63,7 @@
     \item 1\spades\ = 4+\spades
     \item 1\ntx\ = 7-10, no 4\majs
     \item 2\clubs\ = 12-14 \bal or \clubs, \gf
-    \item 2\diams\ = no 4\majs, 5+\diams, \gf
+    \item 2\diams\ = 5+\diams, \gf, may have 4\majs
     \item 2\hearts\ = 5\spades4\hearts\ 6-9
     \item 2\spades\ = 11+ \bal, no 4\majs
     \item 2\ntx\ = 11-12 \bal
@@ -563,7 +563,7 @@ It does not deny 3/4\diams.
     \item 3\anysuit{x} = 4-fit, solid 5\anysuit{x}
     \item 2\nt = 4-fit, solid 5\clubs
     \item 3\majs = 5-fit 4-6\dps (or 4 with shortness)
-    \item 3\nt = Two Tiered Splinters = 4+\majs, unspecified singleton, (10)11\dps
+    \item 3\nt over 1\spades (3\spades over 1\hearts) = Two Tiered Splinters = 4+\majs, unspecified singleton, (10)11\dps \\
     \item 4\clubs/4\diams/4\hearts = void splinter
 \end{itemize}
 
