--- a/KrysiaBartek2024/source/preempt2nt.tex
+++ b/KrysiaBartek2024/source/preempt2nt.tex
@@ -48,7 +48,7 @@
                 (P) -- 3\diams -- (P) -- 3\hearts \\
                 (P) -- ?}
 \begin{itemize}
-    \item 3\spades = no \hearts stopper
+    \item 3\spades = last train for a 3\nt game
     \item 3\nt = good \hearts stopper
 \end{itemize}
 
@@ -56,8 +56,10 @@
                 (P) -- 3\diams -- (P) -- 3\hearts \\
                 (P) -- 3\spades -- (P) -- ?}
 \begin{itemize}
-    \item 3\nt = 3\spades
+    \item 3\nt = weak own suit
     \item 4\clubs, 4\diams = own suit
+    \item 4\hearts = \minor: 4\spades agreeing \clubs, 4\nt agreeing \diams
+    \item 4\spades = 3\spades
 \end{itemize}
 
 \subsubsection*{(2\hearts) -- 2\nt -- (P) -- 3\diams \\
@@ -119,7 +121,7 @@
                 (P) -- 3\diams -- (P) -- 3\hearts \\
                 (P) -- ?}
 \begin{itemize}
-    \item 3\spades = no \spades stopper
+    \item 3\spades = last train for a 3\nt game
     \item 3\nt = good \spades stopper
 \end{itemize}
 
@@ -127,8 +129,9 @@
                 (P) -- 3\diams -- (P) -- 3\hearts \\
                 (P) -- 3\spades -- (P) -- ?}
 \begin{itemize}
-    \item 3\nt = 3\hearts
+    \item 3\nt = weak own suit
     \item 4\clubs, 4\diams = own suit
+    \item 4\hearts = 3\hearts
 \end{itemize}
 
 \subsubsection*{(2\spades) -- 2\nt -- (P) -- 3\diams \\
