--- a/KrysiaBartek2024/source/drury.tex
+++ b/KrysiaBartek2024/source/drury.tex
@@ -27,7 +27,7 @@
     \item 3\anysuit{x} = 4-fit, solid 5\anysuit{x}
     \item 2\nt = 4-fit, solid 5\clubs
     \item 3\majs = 5-fit 4-6\dps (or 4 with shortness)
-    \item 3\nt over 1\spades (3\spades over 1\hearts) = Two Tiered Splinters = 4+\majs, unspecified singleton, (10)11\dps \\
+    \item 3\nt over 1\spades (3\spades over 1\hearts) = Two Tiered Splinters = 4+\majs, unspecified singleton, (10)11\dps
     \item 4\clubs/4\diams/4\hearts = void splinter
 \end{itemize}
 
