--- a/KrysiaBartek2024/source/transfers1MX.tex
+++ b/KrysiaBartek2024/source/transfers1MX.tex
@@ -15,7 +15,7 @@
 %%% TITLE: Transfers after 1\majs\ (\dbl)
 %%% SYSTEM BEGIN %%%
 
-\subsubsection*{\alrts{1\hearts} -- (\dbl) -- ?}
+\subsubsection*{1\hearts -- (\dbl) -- ?}
 \begin{itemize}
     \item \rdbl = 10+ (may have 3\hearts)
     \item 1\spades = \nat, 4+\spades, \fonce
@@ -24,12 +24,12 @@
     \item 2\diams = \trsf{2\hearts}, constructive 8-10
     \item 2\hearts = 4-7, 3\hearts
     \item 2\spades = \spades, (3)4\hearts \invp
-    \item 2\nt = 4+\hearts \inv
+    \item 2\nt = 4+\hearts \invp
     \item 3\clubs = \clubs, (3)4\hearts \invp
-    \item 3\diams = \diams, (3)4\hearts \invp
-    \item 3\hearts = 4+\hearts, 6-9
-    \item 3\spades = 4+\hearts, ask shortness (response \small{\textbf{NAT}}) \imp
-    \item 3\nt = semi-preempt, \spades, 4+\hearts \vimp
+    \item 3\diams = 4+\hearts, 6-9
+    \item 3\hearts = 4+\hearts, 0-5
+    \item 3\spades = 4+\hearts, \lsf \vimp
+    \item 3\nt = semi-preempt, \spades, 4+\hearts
     \item 4\clubs = semi-preempt, \clubs, 4+\hearts
     \item 4\diams = semi-preempt, \diams, 4+\hearts
     \item 4\hearts = preempt
@@ -43,12 +43,12 @@
     \item 2\diams = \trsf{2\hearts}
     \item 2\hearts = \trsf{2\spades}, constructive 8-10
     \item 2\spades = 4-7, 3\spades
-    \item 2\nt = 4\spades \inv
+    \item 2\nt = 4\spades \invp
     \item 3\clubs = \clubs, (3)4\spades \invp
     \item 3\diams = \diams, (3)4\spades \invp
-    \item 3\hearts = \hearts, (3)4\spades \invp
-    \item 3\spades = 4+\spades, 6-9
-    \item 3\nt =  4+\spades, ask shortness (response \small{\textbf{NAT}}) \imp
+    \item 3\hearts = 4+\spades, 6-9
+    \item 3\spades = 4+\spades, 0-5
+    \item 3\nt =  4+\spades, \lsf \vimp
     \item 4\clubs = semi-preempt, \clubs, 4+\spades
     \item 4\diams = semi-preempt, \diams, 4+\spades
     \item 4\hearts = semi-preempt, \hearts, 4+\spades
