--- a/KrysiaBartek2024/hands/3nt_easy.tex
+++ b/KrysiaBartek2024/hands/3nt_easy.tex
@@ -10,13 +10,19 @@
         {\vfhand{T3}{QJ76542}{T6}{QT}}
         {\vfhand{AJ98}{AKT9}{J3}{A87}}
         {\vfhand{Q7652}{3}{72}{KJ963}}
-        {NS}
+        {NS} % < tu piszemy kto w czerwonych
+
+% wigilijny 2023
 
 \fvhandp{\vfhand{AKQJT}{5432}{432}{A}}
         {\vfhand{--}{QJT9876}{T98765}{--}}
         {\vfhand{456789}{--}{--}{KQJT987}}
         {\vfhand{23}{KA}{AKQJ}{65432}}
         {NS}
+
+\newpage
+
+% ktoś zapomniał potasować
 
 \fvhandp{\vfhand{AKQJT98765432}{--}{--}{--}}
         {\vfhand{--}{--}{--}{AKQJT98765432}}
