--- a/KrysiaBartek2024/hands/3nt_easy.tex
+++ b/KrysiaBartek2024/hands/3nt_easy.tex
@@ -6,28 +6,40 @@
 
 \begin{document}
 
-\fvhandp{\vfhand{K4}{8}{AKQ9854}{542}}
-        {\vfhand{T3}{QJ76542}{T6}{QT}}
-        {\vfhand{AJ98}{AKT9}{J3}{A87}}
-        {\vfhand{Q7652}{3}{72}{KJ963}}
-        {NS} % < tu piszemy kto w czerwonych
-
-% wigilijny 2023
-
-\fvhandp{\vfhand{AKQJT}{5432}{432}{A}}
-        {\vfhand{--}{QJT9876}{T98765}{--}}
-        {\vfhand{456789}{--}{--}{KQJT987}}
-        {\vfhand{23}{KA}{AKQJ}{65432}}
-        {NS}
-
-\newpage
-
-% ktoś zapomniał potasować
-
-\fvhandp{\vfhand{AKQJT98765432}{--}{--}{--}}
-        {\vfhand{--}{--}{--}{AKQJT98765432}}
-        {\vfhand{--}{--}{AKQJT98765432}{--}}
-        {\vfhand{--}{AKQJT98765432}{--}{--}}
+\fhandp{\hhand{7}{KQ93}{Q982}{KJ64}}{11}
+        {}{}
+        {\hhand{AKT}{654}{K4}{AQT95}}{16}
+        {}{}
         {}
+
+West leads 4\spades against 3\nt, East puts J\spades.
+\begin{center}
+    ***
+\end{center}
+We take the lead with the king. 
+If W has the A\hearts, we can easily take two \hearts
+tricks, as defenders won't have time to get to the spades.
+However, if ace is with E, playing hearts on the second trick
+will doom the contract. Note, that W is now our `safe' opponent,
+as we have double spade stopper against him.
+Therefore, we should play the diamond from dummy before 
+trying the hearts. If K\diams falls to W's ace, we
+can simply take the next trick and play K\hearts.
+Now A\hearts being with E is not a threat anymore.
+There is still danger that E has JTxxx\diams together with A\hearts and W will
+return a diamond after winning with A\diams, 
+but the chances that this is not the case are much better
+then simply hoping for A\hearts to be with W.
+
+\vspace{0.2cm}
+
+The complete hand:
+
+\fhandp{\hhand{7}{KQ93}{Q982}{KJ64}}{11}
+        {\hhand{J853}{AJ2}{J753}{82}}{7}
+        {\hhand{AKT}{654}{K4}{AQT95}}{16}
+        {\hhand{Q9642}{T87}{AT6}{73}}{6}
+        {}
+
 
 \end{document}
