--- a/KrysiaBartek2024/hands/4s_squeeze3rdLeague.tex
+++ b/KrysiaBartek2024/hands/4s_squeeze3rdLeague.tex
@@ -15,7 +15,7 @@ Cards face-up problem:
         {NSWE}
 
 
-Against against 4\spades W leads 4\diams.
+Against 4\spades W leads 4\diams.
 \begin{center}
     ***
 \end{center}
