--- a/lib/bridgetex2.sty
+++ b/lib/bridgetex2.sty
@@ -154,7 +154,7 @@
 \RequirePackage{changepage}
 \RequirePackage{xstring}
 \RequirePackage{multirow}
-\newcommand{\fvhandp}[5]{
+\newcommand{\fvhand}[5]{
   \begin{adjustwidth}{-0.9cm}{-0.4cm}
     \savebox{\VHandBox}{#4}
     \setlength{\VHandHeight}{\dimexpr 0.41\linewidth - \wd\VHandBox \relax}
