--- a/KrysiaBartek2024/hands/3nt_easy.tex
+++ b/KrysiaBartek2024/hands/3nt_easy.tex
@@ -4,7 +4,10 @@
 \usepackage{enumitem}
 \usepackage[table]{xcolor}
 
+\title{3nt [easy]\\\vspace{0.3cm}\normalsize{from \textit{Planning the Play in Notrump}}}
+\author{Krystyna Gasińska}
 \begin{document}
+\maketitle
 
 \fhandp{\hhand{7}{KQ93}{Q982}{KJ64}}{11}
         {}{}
