--- a/KrysiaBartek2024/hands/4s_squeeze3rdLeague.tex
+++ b/KrysiaBartek2024/hands/4s_squeeze3rdLeague.tex
@@ -23,14 +23,13 @@ The \twosuit{\clubs}{\diams} squeeze on E.
 We play all the spades throwing out hearts in dummy.
 W wins two of them. We give up the
 second diamond and ruff the third. E is left
-with KQ\diams and Q84\clubs and we still have two
-more trumps in our hand. So we play one of them and
-E is squeezed:
+with K\diams and Q84\clubs and we still one
+more trump -- when we play it, E is squeezed:
 
-\handdiagramh{\hhand{--}{9}{8}{A96}}{}
-        {\hhand{--}{--}{KQ}{Q84}}{}
-        {\hhand{87}{--}{--}{KT5}}{}
-        {\hhand{--}{KJT}{--}{J7}}{}
+\handdiagramh{\hhand{--}{}{8}{A96}}{}
+        {\hhand{--}{--}{K}{Q84}}{}
+        {\hhand{7}{--}{--}{KT5}}{}
+        {\hhand{--}{KJ}{--}{J7}}{}
         {NSWE}
 
 \end{document}
