4lvl fit after pre

--- a/lib/bridge.sty
+++ b/lib/bridge.sty
@@ -42,6 +42,7 @@
 \newcommand{\imp}{\color{BurntOrange}\link{\textbf{\large!}}\color{black}}
 \newcommand{\vimp}{\color{OrangeRed}\link{\textbf{\large{!!}}}\color{black}}
 \newcommand{\exq}{\color{JungleGreen}\link{\textbf{\large{?!}}}\color{black}}
+\newcommand{\qq}{\color{Fuchsia}\link{\textbf{\large{?}}}\color{black}}
 \newcommand{\addhcp}[1]{\color{JungleGreen}\link{\textbf{\large{#1}}}\color{black}}
 \newcommand{\anysuit}[1]{\color{PineGreen}{\textbf{{#1}}}\color{black}\xspace}
 \newcommand{\mins}{\textbf{m}\xspace}
