--- a/KrysiaBartek2024/source/fit4lvlAfterPre.tex
+++ b/KrysiaBartek2024/source/fit4lvlAfterPre.tex
@@ -30,10 +30,10 @@ Bid: 4\clubs to show fit, 4\diams to show \clubs.
 Bid: 3\spades -- opps' color is available at level 3.
 \item 
 \subsubsection*{(2\hearts) -- \dbl -- (3\hearts) -- 3\spades \\ (P) -- ?}
-Bid: ? \qq
+Bid: 4\clubs to show fit, 4\hearts to show strong \clubs.
 \item 
 \subsubsection*{(P) -- 1\hearts -- (3\spades) -- ?}
-Bid: 4\clubs to show fit, 4\spades to show strong \clubs \qq
+Bid: 4\clubs to show fit, 4\spades to show strong \clubs.
 \end{enumerate}
 
 \end{document}
