--- a/KrysiaBartek2024/source/2ntOpening.tex
+++ b/KrysiaBartek2024/source/2ntOpening.tex
@@ -22,7 +22,7 @@
     \item 3\diams\ = forces 3\hearts, \gf
     \item 3\hearts\ = forces 3\spades, \gf
     \item 3\spades\ = forces 3\nt
-    \item 3\nt\ = 5\spades4\hearts
+    \item 3\nt\ = 5\spades4\hearts, \nf \imp
     \item 4\clubs\ = 55 \majs
     \item 4\diams, 4\hearts\ = Texas
     \item 4\nt\ = quantitative
