--- a/KrysiaBartek2024/source/drury.tex
+++ b/KrysiaBartek2024/source/drury.tex
@@ -34,9 +34,9 @@
 \begin{itemize}
     \item 2\hearts = no interest in the game
     \item 2\diams = \inv
-    \item 2\nt = 18-20 \bal
-    \item 2\spades/3\clubs/3\diams = 55(54) Slam Try
-    \item 3\spades/4\clubs/4\diams = splinter
+    \item 2\spades = \lsf, usually 18-20 \bal
+    \item 2\nt/3\clubs/3\diams = 55(54) Slam Try (2\nt = \spades)
+    \item 3\nt/3\spades/4\clubs/4\diams = splinter (3\nt = 4\diams)
     \item 4\hearts = to play
 \end{itemize}
 
@@ -44,9 +44,9 @@
 \begin{itemize}
     \item 2\spades = no interest in the game
     \item 2\diams = \inv
-    \item 2\nt = 18-20 \bal
+    \item 2\nt = \lsf, usually 18-20 \bal
     \item 3\clubs/3\diams/3\hearts = 55(54) Slam Try
-    \item 4\clubs/4\diams/4\hearts = splinter
+    \item 3\nt/4\clubs/4\diams/4\hearts = splinter (3\nt = 4\hearts)
     \item 4\spades = to play
 \end{itemize}
 
