--- a/KrysiaBartek2024/source/ovecallsAfter2nt.tex
+++ b/KrysiaBartek2024/source/ovecallsAfter2nt.tex
@@ -4,7 +4,7 @@
 \import{../../lib/}{bridge.sty}
 \setmainlanguage{english}
 
-\title{Overcalling 2\ntx}
+\title{Overcalls after 2\ntx\ opening}
 \author{Krystyna Gasińska, Bartek Słupik}
 \begin{document}
 \maketitle
@@ -24,7 +24,7 @@ Do not overcall with:\\
 
 %%% ID: 14
 %%% PRIORITY: 350
-%%% TITLE: Overcalling 2\ntx
+%%% TITLE: Overcalls after 2\ntx\ opening
 %%% SYSTEM BEGIN %%%
 
 \subsubsection*{(2\nt) -- ?}
