--- a/KrysiaBartek2024/source/overcallsAfter1nt.tex
+++ b/KrysiaBartek2024/source/overcallsAfter1nt.tex
@@ -4,14 +4,14 @@
 \import{../../lib/}{bridge.sty}
 \setmainlanguage{english}
 
-\title{Overcalling 1\ntx}
+\title{Overcalls after 1\ntx\ opening}
 \author{Krystyna Gasińska, Bartek Słupik}
 \begin{document}
 \maketitle
 
 %%% ID: 13
 %%% PRIORITY: 31
-%%% TITLE: Overcalling 1\ntx
+%%% TITLE: Overcalls after 1\ntx\ opening
 %%% SYSTEM BEGIN %%%
 
 \subsubsection*{(1\ntx) -- ?}
