--- a/KrysiaBartek2024/source/1ntInterference.tex
+++ b/KrysiaBartek2024/source/1ntInterference.tex
@@ -26,7 +26,7 @@
 2\clubs\ = 5/4 \major
 \begin{itemize}
     \item \dbl\ = 8+
-    \item 2\hearts, 2\spades, 3\clubs\ = to play
+    \item 2\diams, 2\hearts, 2\spades, 3\clubs\ = to play
     \item 2\nt\ = minors
 \end{itemize}
 
