--- a/KrysiaBartek2024/source/overcallsAfter1nt.tex
+++ b/KrysiaBartek2024/source/overcallsAfter1nt.tex
@@ -17,6 +17,7 @@
 \subsubsection*{(1\ntx) -- ?}
 \begin{itemize}
     \item \dbl\ = 5\minor\ + 4\major
+    \item \dbl in balancing position = 5\minor\ + 4\major or 6\minor
     \item 2\clubs\ = 54 \major
     \item 2\diams\ = 6+ \major
     \item 2\hearts\ = 5\hearts\ + 4\minor
