--- a/KrysiaBartek2024/source/majorsAfterCheckback3c.tex
+++ b/KrysiaBartek2024/source/majorsAfterCheckback3c.tex
@@ -4,14 +4,14 @@
 \import{../../lib/}{bridge.sty}
 \setmainlanguage{english}
 
-\title{Majors after checkback 3c}
+\title{Majors after checkback 3\clubs}
 \author{Krystyna Gasińska}
 \begin{document}
 \maketitle
 
 %%% ID: 21
-%%% PRIORITY: 79
-%%% TITLE: Majors after checkback 3c
+%%% PRIORITY: 89
+%%% TITLE: Majors after checkback 3\clubs
 %%% SYSTEM BEGIN %%%
 
 \subsubsection*{1\minor -- 1\hearts \\ 2\nt -- ?}
