--- a/KrysiaBartek2024/source/2ntOpening.tex
+++ b/KrysiaBartek2024/source/2ntOpening.tex
@@ -31,16 +31,16 @@
 % should 3s and 3nt be switched?
 \subsubsection*{2\ntx\ -- 3\diams \\ ?}
 \begin{itemize}
-    \item 3\hearts\ = =2\hearts
+    \item 3\hearts\ =2\hearts
     \item 3\spades\ = 4+\hearts, cue bid
-    \item 3\nt\ = =3\spades
+    \item 3\nt\ =3\spades
     \item 4\clubs, 4\diams\ = 4+\hearts, cue bid
 \end{itemize}
 
 \subsubsection*{2\ntx\ -- 3\hearts \\ ?}
 \begin{itemize}
-    \item 3\spades\ = =2\spades
-    \item 3\nt\ = =3\spades
+    \item 3\spades\ =2\spades
+    \item 3\nt\ =3\spades
     \item 4\clubs, 4\diams\ = 4+\spades, cue bid
 \end{itemize}
 
