--- a/KrysiaBartek2024/source/acolBasicInterference.tex
+++ b/KrysiaBartek2024/source/acolBasicInterference.tex
@@ -14,8 +14,7 @@
 %%% TITLE: Acol interference
 %%% SYSTEM BEGIN %%%
 
-\subsubsection*{Acol interference\\
-                2\clubs\ -- (\anysuit{x}) -- ?}
+\subsubsection*{2\clubs\ -- (\anysuit{x}) -- ?}
 \begin{itemize}
     \item \dbl\ = negative
     \item \pass\ = positive
