--- a/KrysiaBartek2024/source/acolProInterference.tex
+++ b/KrysiaBartek2024/source/acolProInterference.tex
@@ -14,11 +14,44 @@
 %%% TITLE: Acol interference
 %%% SYSTEM BEGIN %%%
 
-\subsubsection*{Acol interference\\
-                2\clubs\ -- (\anysuit{x}) -- ?}
+\subsubsection*{2\clubs\ -- (\anysuit{any}) -- ?}
 \begin{itemize}
-    \item \dbl\ = negative
-    \item \pass\ = positive
+    \item \dbl\ = take out, \gf
+    \item \pass\ = negative
+    \item own suit = 4+ \hcp, 5+ cards, \gf
+    \item own suit with leap = stronger hand, \gf
+\end{itemize}
+
+\subsubsection*{2\clubs\ -- (\dbl) -- ?}
+\dbl = \clubs
+\begin{itemize}
+    \item \rdbl = take out (to \clubs), \gf \imp
+    \item \pass = negative
+    \item 2\diams = positive, \bal
+    \item 2\hearts/2\spades = own suit
+\end{itemize}
+
+\subsubsection*{2\clubs\ -- (\dbl) -- ?}
+\dbl = other
+\begin{itemize}
+    \item \rdbl = positive
+    \item \pass = negative
+    \item 2\diams/2\hearts/2\spades = own suit
+\end{itemize}
+
+\subsubsection*{2\clubs\ -- (P) -- 2\diams -- (\anysuit{any})
+                \\ ?}
+\begin{itemize}
+    \item \dbl = take out \imp
+    \item \pass = forces \dbl
+\end{itemize}
+
+\subsubsection*{2\clubs\ -- (P) -- 2\diams -- (\anysuit{any})
+                \\ \alrts{P} -- (P) -- \dbl -- (P)
+                \\ ?}
+\begin{itemize}
+    \item \pass = penalty
+    \item own suit = 4+ \imp
 \end{itemize}
 
 %%% SYSTEM END %%%
