--- a/KrysiaBartek2024/source/1MOpening.tex
+++ b/KrysiaBartek2024/source/1MOpening.tex
@@ -18,7 +18,7 @@
 \begin{itemize}
     \item 1\spades = 4+\spades, no 3\hearts OR 5\spades3\hearts + \gf
     \item 1\nt = 5-11\hcp, (or 5-7\hcp with \hearts fit)
-    \item 2\clubs = any \gf, usually no 5-card (or 5+\clubs)
+    \item 2\clubs = any \gf
     \item 2\diams = 5\diams, \gf
     \item 2\hearts = constructive raise
     \item 2\spades = mini splinter
@@ -35,7 +35,7 @@
 \subsubsection*{1\spades -- ?}
 \begin{itemize}
     \item 1\nt = 5-11\hcp, (or 5-7\hcp with \spades fit)
-    \item 2\clubs = any \gf, usually no 5-card (or 5+\clubs)
+    \item 2\clubs = any \gf
     \item 2\diams = 5\diams, \gf
     \item 2\hearts = 5\hearts, \gf
     \item 2\spades = constructive raise
