--- a/KrysiaBartek2024/source/1mOpening.tex
+++ b/KrysiaBartek2024/source/1mOpening.tex
@@ -34,7 +34,7 @@
     \item 1\spades\ = 4+\spades
     \item 1\ntx\ = 6-10, no 4\majs, no \diams\ support
     \item 2\clubs\ = 12-14 \bal or \clubs, \gf
-    \item 2\diams\ = no 4\majs, 4+\diams, \gf
+    \item 2\diams\ = no 4\majs, 4+\diams, \invp
     \item 2\hearts\ = 5\spades4\hearts\ 6-9
     \item 2\spades\ = 11+ \bal, no 4\majs
     \item 2\ntx\ = 11-12 \bal
