--- a/KrysiaBartek2024/source/1ntOpening.tex
+++ b/KrysiaBartek2024/source/1ntOpening.tex
@@ -49,8 +49,8 @@
 \begin{itemize}
     \item 3\spades\ = \nat
     \item 3\nt\ = to play
-    \item 4\hearts\ = exclusion, choose \minor
-    \item 4\nt\ = choose \minor
+    \item 4\hearts\ = pick a \minor, good hand
+    \item 4\nt\ = pick a \minor
 \end{itemize}
 
 \subsubsection*{Smolen \\
