--- a/KrysiaBartek2024/source/twoSuitAgreeing.tex
+++ b/KrysiaBartek2024/source/twoSuitAgreeing.tex
@@ -25,7 +25,7 @@
 \subsubsection*{(2\spades) -- 4\diams -- (P) -- ?}
 \begin{itemize}
     \item 4\hearts = \soff
-    \item 4\spades = agreeing \clubs
+    \item 4\spades = agreeing \diams
     \item 4\nt = agreeing \hearts
     \item 5\diams = \soff
 \end{itemize}
